--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Один контейнер для картинки и GIF -->
     <div class="image-container">
         <!-- Картинка -->
-        <img src="промо Х второе руководство копия 2.png" class="background-img" alt="Фон 1">
+        <img src="промо Х второе руководство копия.png" class="background-img" alt="Фон 1">
  
 
         
